# AlbedoDB

./: .gitignore  CMakeLists.txt  README.md
include/: AlbedoDB.hpp  CMakeLists.txt  main.cpp
include/backends/MySQL/: CMakeLists.txt  albedodb_backend.cc  albedodb_backend.h
